--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prepare": "npx husky install"
   },
   "dependencies": {
+    "nprogress": "^0.2.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
   },
@@ -24,6 +25,7 @@
     "@commitlint/config-conventional": "^16.2.1",
     "@hayeslv/eslint-config": "^0.1.2",
     "@types/node": "^17.0.21",
+    "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^2.2.0",
     "@vitejs/plugin-vue-jsx": "^1.3.8",
     "commitizen": "^4.2.4",
