--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "sass": "^1.49.9",
     "typescript": "^4.5.4",
     "vite": "^2.8.0",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^0.29.8"
   },
   "eslintConfig": {
