--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "lib": ["esnext", "dom"],
+    "types": ["vite/client"],
     "paths": {
       "~/*": ["src/*"]
     }
