--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
-    "@hayeslv/eslint-config": "^0.1.2",
+    "@hayeslv/eslint-config": "^0.1.4",
     "@types/node": "^17.0.21",
     "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^2.2.0",
@@ -48,6 +48,8 @@
     "ignorePatterns": [
       "auto-imports.d.ts"
     ],
-    "rules": {}
+    "rules": {
+      "@typescript-eslint/no-use-before-define": "off"
+    }
   }
 }
