--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prepare": "npx husky install"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.1",
     "element-plus": "^2.2.2",
     "nprogress": "^0.2.0",
     "vue": "^3.2.25",
