--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "element-plus": "^2.2.2",
     "nprogress": "^0.2.0",
     "vue": "^3.2.25",
+    "vue-draggable-next": "^2.1.1",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
