fix(center-board): 解决组件过渡中也会被dragenter中，直接下一次移动位置的问题

--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
       "auto-imports.d.ts"
     ],
     "rules": {
-      "@typescript-eslint/no-use-before-define": "off"
+      "@typescript-eslint/no-use-before-define": "off",
+      "no-multi-spaces": "off"
     }
   }
 }
