--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
-    "@hayeslv/eslint-config": "^0.1.4",
+    "@hayeslv/eslint-config": "0.1.6",
     "@types/node": "^17.0.21",
     "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^2.2.0",
@@ -53,7 +53,8 @@
     ],
     "rules": {
       "@typescript-eslint/no-use-before-define": "off",
-      "no-multi-spaces": "off"
+      "no-multi-spaces": "off",
+      "@typescript-eslint/brace-style": "off"
     }
   }
 }
