--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
       "@hayeslv"
     ],
     "ignorePatterns": [
-      "auto-imports.d.ts"
+      "auto-imports.d.ts",
+      "autobuild"
     ],
     "rules": {
       "@typescript-eslint/no-use-before-define": "off",
