--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "rules": {
       "@typescript-eslint/no-use-before-define": "off",
       "no-multi-spaces": "off",
-      "@typescript-eslint/brace-style": "off"
+      "@typescript-eslint/brace-style": "off",
+      "vue/no-setup-props-destructure": "off"
     }
   }
 }
