--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "element-plus": "^2.2.2",
     "file-saver": "^2.0.5",
     "lodash": "^4.17.21",
+    "mitt": "^3.0.0",
     "nprogress": "^0.2.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
