--- a/package.json
+++ b/package.json
@@ -57,8 +57,7 @@
       "@typescript-eslint/no-use-before-define": "off",
       "no-multi-spaces": "off",
       "@typescript-eslint/brace-style": "off",
-      "vue/no-setup-props-destructure": "off",
-      "@typescript-eslint/indent": "off"
+      "vue/no-setup-props-destructure": "off"
     }
   }
 }
